--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,6 +66,16 @@ header a {
   border-radius: 50%;
   color: #333;
 }
+.edit {
+  position: absolute;
+  top: 20px;
+  right: 70px;
+  cursor: pointer;
+  background: #f1f1f1;
+  padding: 6px;
+  border-radius: 50%;
+  color: #333;
+}
  
 /* new workout form */
 label,
@@ -101,4 +111,15 @@ div.error {
 input.error {
   border: 1px solid var(--error);
 }
- 
+
+.search-bar {
+  margin-bottom: 20px;
+}
+
+.search-bar input {
+  width: 50%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
